--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "start-front": "react-scripts start",
     "start-server": "nodemon server.js",
+    "vercel build":"npm run build && npm run prod",
     "start": "npm run build && npm run prod",
     "prod": "node server.js",
     "build": "react-scripts build",
