--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "start-front": "react-scripts start",
     "start-server": "nodemon server.js",
-    "start": "npm run build && npm run prod",
+    "start": "npm run prod",
     "prod": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
