--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "start-front": "react-scripts start",
     "start-server": "nodemon server.js",
     "start": "npm run prod",
+    "build":"",
     "prod": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
